tests/fixtures/cilium/policies/allow-ingress-specific-ns-ccnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-specific-namespace-ccnp
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: "cilium-test-ccnp1"
      kind: ccnp
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: "cilium-test-ccnp2"
